--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Maven+Pro:wght@700&display=swap");
+
+// font-family: 'Maven Pro', sans-serif;
+
 * {
   margin: 0;
   padding: 0;
@@ -13,16 +16,3 @@ html {
 body {
   display: grid;
 }
-
-nav {
-  display: grid;
-}
-nav .banner {
-  background-color: #000;
-}
-nav .menu .menu-icon svg {
-  width: 1rem;
-  height: auto;
-}
-
-/*# sourceMappingURL=style.css.map */
