--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,11 @@
 @import "./base";
 @import "./colors";
 @import "./typography";
+@import "./mixins";
 
 nav {
   display: grid;
+  min-height: 15vh;
   .banner {
     display: flex;
     background-color: $black;
@@ -45,6 +47,38 @@ nav {
 }
 
 .hero {
+  min-height: 85vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background: $background no-repeat bottom/80% url("../img/1.png");
+  h1 {
+    margin-top: 1.4rem;
+    font-size: 2em;
+    font-weight: $regular;
+  }
+  h2 {
+    margin-top: 1.7rem;
+    color: $secondary-text;
+    font-size: 1.3em;
+    font-weight: $regular;
+    line-height: 1.8rem;
+    padding: 1.7rem 2.7rem 0;
+    text-align: justify;
+    text-align-last: center;
+    letter-spacing: 0.1rem;
+  }
+  a {
+    text-decoration: none;
+    background-color: $black;
+    color: $white;
+    margin: 2rem 4rem 0;
+    border-radius: 10px;
+    padding: 1rem 4rem;
+    font-size: 1.2em;
+    font-weight: $bold;
+  }
 }
 
 .icons {
